// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Models rendering tests models empty - test 1`] = `
<div>
  <div
    class="space-y-4"
    data-testid="prompt-models"
  >
    <div>
      <h2
        class="text-xl font-semibold text-slate-900"
      >
        Modelle
      </h2>
      <p
        class="mt-1 text-sm text-slate-500"
      >
        Verwalte deine Modelle. Änderungen wirken sich auf alle verknüpften Prompts aus.
      </p>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="flex justify-end"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
          data-slot="button"
          data-testid="create-model-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-1 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Modell hinzufügen
        </button>
        <div
          data-slot="dialog"
          data-testid="mock-react-dialog-root"
        >
          <div
            data-slot="dialog-portal"
            data-testid="mock-react-dialog-portal"
          >
            <div
              class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
              data-slot="dialog-overlay"
              data-testid="mock-react-dialog-overlay"
            />
          </div>
        </div>
      </div>
      <div
        class="space-y-2"
      />
    </div>
    <div
      class="rounded-lg border-2 border-dashed border-slate-200 bg-slate-50 py-12 text-center"
      data-testid="models-empty"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-cpu mx-auto mb-3 h-8 w-8 text-slate-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 20v2"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M17 20v2"
        />
        <path
          d="M17 2v2"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="M2 17h2"
        />
        <path
          d="M2 7h2"
        />
        <path
          d="M20 12h2"
        />
        <path
          d="M20 17h2"
        />
        <path
          d="M20 7h2"
        />
        <path
          d="M7 20v2"
        />
        <path
          d="M7 2v2"
        />
        <rect
          height="16"
          rx="2"
          width="16"
          x="4"
          y="4"
        />
        <rect
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </svg>
      <p
        class="font-medium text-slate-600"
      >
        Noch keine Modelle
      </p>
      <p
        class="mt-1 text-sm text-slate-400"
      >
        Erstelle dein erstes Modell oder weise es direkt einem Prompt zu
      </p>
    </div>
  </div>
</div>
`;

exports[`Models rendering tests models retrieved - test 1`] = `
<div>
  <div
    class="space-y-4"
    data-testid="prompt-models"
  >
    <div>
      <h2
        class="text-xl font-semibold text-slate-900"
      >
        Modelle
      </h2>
      <p
        class="mt-1 text-sm text-slate-500"
      >
        Verwalte deine Modelle. Änderungen wirken sich auf alle verknüpften Prompts aus.
      </p>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="flex justify-end"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
          data-slot="button"
          data-testid="create-model-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-1 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Modell hinzufügen
        </button>
        <div
          data-slot="dialog"
          data-testid="mock-react-dialog-root"
        >
          <div
            data-slot="dialog-portal"
            data-testid="mock-react-dialog-portal"
          >
            <div
              class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
              data-slot="dialog-overlay"
              data-testid="mock-react-dialog-overlay"
            />
          </div>
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center justify-between rounded-lg border bg-card px-4 py-3 shadow-sm"
          data-testid="model-item"
        >
          <div
            class="flex items-center gap-3"
          >
            <span
              class="text-sm font-medium text-slate-900"
            >
              model 0
            </span>
            <span
              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs"
              data-slot="badge"
            >
              0 Prompts
            </span>
          </div>
          <div
            class="flex items-center gap-1"
          >
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
              data-slot="button"
              data-testid="update-model-btn"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-pencil h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                />
                <path
                  d="m15 5 4 4"
                />
              </svg>
            </button>
            <div
              data-slot="dialog"
              data-testid="mock-react-dialog-root"
            >
              <div
                data-slot="dialog-portal"
                data-testid="mock-react-dialog-portal"
              >
                <div
                  class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                  data-slot="dialog-overlay"
                  data-testid="mock-react-dialog-overlay"
                />
              </div>
            </div>
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
              data-slot="button"
              data-testid="delete-model-btn"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-trash2 lucide-trash-2 h-4 w-4 text-destructive"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 11v6"
                />
                <path
                  d="M14 11v6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                />
                <path
                  d="M3 6h18"
                />
                <path
                  d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
            </button>
            <div
              data-slot="alert-dialog"
              data-testid="mock-react-alert-dialog-root"
            >
              <div
                data-slot="alert-dialog-portal"
                data-testid="mock-react-alert-dialog-portal"
              >
                <div
                  class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
                  data-slot="alert-dialog-overlay"
                  data-testid="mock-react-alert-dialog-overlay"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center justify-between rounded-lg border bg-card px-4 py-3 shadow-sm"
          data-testid="model-item"
        >
          <div
            class="flex items-center gap-3"
          >
            <span
              class="text-sm font-medium text-slate-900"
            >
              model 1
            </span>
            <span
              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs"
              data-slot="badge"
            >
              1 Prompt
            </span>
          </div>
          <div
            class="flex items-center gap-1"
          >
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
              data-slot="button"
              data-testid="update-model-btn"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-pencil h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                />
                <path
                  d="m15 5 4 4"
                />
              </svg>
            </button>
            <div
              data-slot="dialog"
              data-testid="mock-react-dialog-root"
            >
              <div
                data-slot="dialog-portal"
                data-testid="mock-react-dialog-portal"
              >
                <div
                  class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                  data-slot="dialog-overlay"
                  data-testid="mock-react-dialog-overlay"
                />
              </div>
            </div>
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
              data-slot="button"
              data-testid="delete-model-btn"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-trash2 lucide-trash-2 h-4 w-4 text-destructive"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 11v6"
                />
                <path
                  d="M14 11v6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                />
                <path
                  d="M3 6h18"
                />
                <path
                  d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
            </button>
            <div
              data-slot="alert-dialog"
              data-testid="mock-react-alert-dialog-root"
            >
              <div
                data-slot="alert-dialog-portal"
                data-testid="mock-react-alert-dialog-portal"
              >
                <div
                  class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
                  data-slot="alert-dialog-overlay"
                  data-testid="mock-react-alert-dialog-overlay"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center justify-between rounded-lg border bg-card px-4 py-3 shadow-sm"
          data-testid="model-item"
        >
          <div
            class="flex items-center gap-3"
          >
            <span
              class="text-sm font-medium text-slate-900"
            >
              model 2
            </span>
            <span
              class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs"
              data-slot="badge"
            >
              2 Prompts
            </span>
          </div>
          <div
            class="flex items-center gap-1"
          >
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
              data-slot="button"
              data-testid="update-model-btn"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-pencil h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                />
                <path
                  d="m15 5 4 4"
                />
              </svg>
            </button>
            <div
              data-slot="dialog"
              data-testid="mock-react-dialog-root"
            >
              <div
                data-slot="dialog-portal"
                data-testid="mock-react-dialog-portal"
              >
                <div
                  class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                  data-slot="dialog-overlay"
                  data-testid="mock-react-dialog-overlay"
                />
              </div>
            </div>
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
              data-slot="button"
              data-testid="delete-model-btn"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-trash2 lucide-trash-2 h-4 w-4 text-destructive"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 11v6"
                />
                <path
                  d="M14 11v6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                />
                <path
                  d="M3 6h18"
                />
                <path
                  d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
            </button>
            <div
              data-slot="alert-dialog"
              data-testid="mock-react-alert-dialog-root"
            >
              <div
                data-slot="alert-dialog-portal"
                data-testid="mock-react-alert-dialog-portal"
              >
                <div
                  class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
                  data-slot="alert-dialog-overlay"
                  data-testid="mock-react-alert-dialog-overlay"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
